# hydra

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Embed.toml  Makefile.toml  README.md  build.sh  dump.txt  logging.sh  rttLog.sh  rust-toolchain.toml  thermo.md
boards/beacon/: Cargo.toml
boards/beacon/src/: communication.rs  data_manager.rs  main.rs  types.rs
boards/communication/: Cargo.toml
boards/communication/src/: communication.rs  data_manager.rs  gps.rs  gps_manager.rs  health.rs  main.rs  sd_manager.rs  types.rs
boards/main/: Cargo.toml
boards/main/src/: communication.rs  data_manager.rs  main.rs  sbg_manager.rs  sd_manager.rs  sensor.rs  statemachine.rs  types.rs
boards/main/src/state_machine/: mod.rs  states.rs
boards/nav/: Cargo.toml
boards/nav/src/: communication.rs  data_manager.rs  main.rs  sbg_manager.rs  types.rs
boards/recovery/: Cargo.toml
boards/recovery/src/: communication.rs  data_manager.rs  gpio_manager.rs  health.rs  main.rs  statemachine.rs  types.rs
boards/recovery/src/state_machine/: black_magic.rs  mod.rs
boards/recovery/src/state_machine/states/: abort.rs  apogee.rs  ascent.rs  descent.rs  initializing.rs  landed.rs  mod.rs  terminal_descent.rs  wait_for_recovery.rs  wait_for_takeoff.rs
boards/sensor/: Cargo.toml
boards/sensor/src/: communication.rs  data_manager.rs  main.rs  sbg_manager.rs  sd_manager.rs  types.rs
boards/sensor_v2/: Cargo.toml
boards/sensor_v2/src/: data_manager.rs  main.rs
examples/rtic/: Cargo.toml  memory.x
examples/rtic/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: data_manager.rs  main.rs  sbg_manager.rs
libraries/common-arm/: Cargo.toml  memory.x
libraries/common-arm/common-arm-proc-macro-lib/: Cargo.toml
libraries/common-arm/common-arm-proc-macro-lib/src/: data_manager.rs  lib.rs
libraries/common-arm/src/: lib.rs  logging.rs  sd.rs  sd_manager.rs
libraries/common-arm/src/error/: error_manager.rs  hydra_error.rs  mod.rs
libraries/common-arm/src/health/: health_manager.rs  health_monitor.rs  mod.rs
libraries/common-arm/src/sd/: mod.rs  sd_interface.rs
libraries/common-arm/src/thermocouple/: ignore_this.rs  lookup_table.rs  mod.rs  thermocouple.rs  thermocouple_interface.rs
libraries/common-arm/tests/: sd.rs
libraries/messages/: .gitignore  Cargo.toml
libraries/messages/f_bindings/: Air.ts  Data.ts  EkfNav1.ts  EkfNav2.ts  EkfQuat.ts  ErrorContext.ts  Event.ts  GpsVel.ts  Imu1.ts  Imu2.ts  Log.ts  LogLevel.ts  Message.ts  Sender.ts  Sensor.ts  SensorData.ts  State.ts  Status.ts  UtcTime.ts
libraries/messages/messages-proc-macros-lib/: Cargo.toml
libraries/messages/messages-proc-macros-lib/src/: lib.rs
libraries/messages/src/: ack.rs  command.rs  health.rs  lib.rs  mav_message.rs  node.rs  sender.rs  sensor.rs  sensor_status.rs  state.rs
libraries/messages/src/logging/: log.rs  macros.rs  mod.rs
libraries/sbg-rs/: Cargo.toml  build.rs  generateBindings.md  wrapper.h
libraries/sbg-rs/sbgECom/: CMakeLists.txt
libraries/sbg-rs/sbgECom/common/: sbgDefines.h
libraries/sbg-rs/sbgECom/common/interfaces/: sbgInterfaceSerial.h
libraries/sbg-rs/sbgECom/common/platform/: sbgPlatform.c  sbgPlatform.h
libraries/sbg-rs/sbgECom/src/: sbgECom.c  sbgEComLib.h
libraries/sbg-rs/src/: bindings.rs  data.txt  data_conversion.rs  lib.rs  sbg.rs
main-board/: Cargo.toml  memory.x
main-board/src/: cdc.rs  main.rs  sd_interface.rs
src/boards/dev/: CMakeLists.txt  main.cpp  syscalls.c
src/boards/dev/hal/: AtmelStart.env_conf  AtmelStart.gpdsc  CMakeLists.txt  atmel_start.c  atmel_start.h  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h  fatfs_main.c  fatfs_main.h  sd_mmc_start.c  sd_mmc_start.h
src/boards/dev/hal/armcc/: Makefile
src/boards/dev/hal/config/: hpl_can_config.h  peripheral_clk_config.h
src/boards/dev/hal/documentation/: fatfs.rst
src/boards/dev/hal/examples/: driver_examples.c  driver_examples.h
src/boards/dev/hal/fatfs/src/: conf_fatfs.h
src/boards/dev/hal/gcc/: Makefile  system_same51.c
src/boards/dev/hal/include/: sam.h
src/boards/main/: CMakeLists.txt  main.cpp  syscalls.c
src/boards/main/AtmelStart/: src.atstart
src/boards/main/TestData/: SBGTest.txt
src/boards/main/hal/: AtmelStart.env_conf  AtmelStart.gpdsc  CMakeLists.txt  atmel_start.c  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h
src/boards/main/hal/armcc/: Makefile
src/boards/main/hal/config/: FreeRTOSConfig.h  hpl_can_config.h  hpl_gclk_config.h  hpl_osc32kctrl_config.h  hpl_sercom_config.h  peripheral_clk_config.h
src/boards/main/hal/examples/: driver_examples.c  driver_examples.h
src/boards/main/hal/fatfs/src/: conf_fatfs.h
src/boards/main/hal/gcc/: AtmelStart.elf  AtmelStart.hex  AtmelStart.lss  AtmelStart.map  Makefile  atmel_start.d  driver_init.d  main.d  rtos_start.d
src/boards/main/hal/gcc/examples/: driver_examples.d
src/boards/main/hal/gcc/gcc/: startup_same51.c  system_same51.d
src/boards/main/hal/gcc/gcc/gcc/: startup_same51.d
src/boards/main/src/: CMakeLists.txt  atmel_start.h  atmel_start_pins.h  driver_init.c  driver_init.h  rtos_start.c  rtos_start.h
src/boards/main/src/StateMachine/: HotFire.cpp  HotFire.h  StateMachine.cpp  StateMachine.h
src/boards/main/src/communication/: fdcan.c  fdcan.h  usart.c  usart.h
src/boards/main/src/config/: FreeRTOSConfig.h  conf_sd_mmc.h  hpl_can_config.h  hpl_gclk_config.h  hpl_osc32kctrl_config.h  hpl_oscctrl_config.h  hpl_rtc_config.h  hpl_sercom_config.h  peripheral_clk_config.h
src/boards/main/src/examples/: driver_examples.c  driver_examples.h
src/boards/main/src/fatfs/src/: conf_fatfs.h
src/boards/main/src/hal/include/: hal_calendar.h
src/boards/main/src/hal/src/: hal_calendar.c  hal_usart_os.c
src/boards/main/src/hpl/rtc/: hpl_rtc.c
src/boards/main/src/hpl/sercom/: hpl_sercom.c
src/boards/main/src/proto/: hydra.proto
src/boards/main/src/sbgECom/common/: sbgDefines.h  sbgErrorCodes.h
src/boards/main/src/sbgECon/src/: sbgECom.c
template/: Cargo.toml  memory.x
template/src/: main.rs
(+145 files in other folders)
