[workspace]

members = [
    "boards/*",
    "examples/*",
    "libraries/*"
]

# Specify which members to build by default. Some libraries, such as messages, contain dev-dependencies that will give
# compile errors if built directly.
default-members = [
    "boards/*",
    "examples/*"
]

[workspace.dependencies.atsamd-hal]
git = "https://github.com/atsamd-rs/atsamd"
features = ["same51j", "same51j-rt", "dma", "can"]

[workspace.dependencies.serde]
version = "1.0.150"
default-features = false
features = ["derive"]

[workspace.dependencies.cortex-m]
version = "0.7.6"
features = ["critical-section-single-core"]

[profile.dev]
# Using LTO causes issues with GDB.
lto = false

# Only optimize dependencies for size in debug, keeping the top crate debug friendly
[profile.dev.package."*"]
opt-level = "s"

[profile.dev.package.sbg-rs]
opt-level = 0
debug = true

[profile.dev.build-override]
opt-level = 0
debug = true

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true
lto = true
opt-level = 2

[profile.release.package.sbg-rs]
debug = true
opt-level = 0

[profile.release.build-override]
opt-level = 0
debug = true