[workspace]

members = [
    "boards/*",
    "examples/*",
    "libraries/*"
]

# Specify which members to build by default. Some libraries, such as messages, contain dev-dependencies that will give
# compile errors if built directly.
default-members = [
    "boards/*",
    "examples/*"
]

[workspace.dependencies.embedded-hal]
version="0.2.7"

[workspace.dependencies.stm32h7xx-hal]
git = "https://github.com/stm32-rs/stm32h7xx-hal"  
# We use 35 even though we have the 33. 
features = ["defmt", "rt", "stm32h735"  ]

[workspace.dependencies.atsamd-hal]
git = "https://github.com/uorocketry/atsamd"
features = ["same51j", "same51j-rt", "dma", "can"]

[workspace.dependencies.stm32l0xx-hal]
git = "https://github.com/stm32-rs/stm32l0xx-hal"
features = ["mcu-STM32L051K8Tx", "rt"]


[workspace.dependencies.serde]
version = "1.0.150"
default-features = false
features = ["derive"]

[workspace.dependencies.cortex-m]
version = "0.7.6"
features = ["critical-section-single-core"]

[profile.dev]
# Using LTO causes issues with GDB.
lto = false

# Only optimize dependencies for size in debug, keeping the top crate debug friendly
[profile.dev.package."*"]
opt-level = "s"

[profile.dev.package.sbg-rs]
opt-level = 0
debug = true

# Try to remove this 
[profile.dev.build-override]
#opt-level = 0 Commenting this may cause issues. 
debug = true

[profile.release]
# symbols are nice and they don't increase the size on Flash
#debug = true
debug = 1
#lto = true There is an issue with this where it says the interrupts symbol is defined multiple times. Only happens for the STM32H7XX.
opt-level = 1

[profile.release.package.sbg-rs]
debug = true
opt-level = 0

#Try to remove this
[profile.release.build-override]
#opt-level = 0