[workspace]
resolver = "2"

members = ["boards/*", "examples/*", "libraries/*"]

# Specify which members to build by default. Some libraries, such as messages, contain dev-dependencies that will give
# compile errors if built directly.
default-members = ["boards/*", "examples/*"]

[workspace.dependencies.embedded-hal]
version = "0.2.7"

[workspace.dependencies.stm32h7xx-hal]
git = "https://github.com/stm32-rs/stm32h7xx-hal"
# We use 35 even though we have the 33. 
features = ["defmt", "rt", "stm32h735", "can", "rtc"]

[workspace.dependencies.atsamd-hal]
git = "https://github.com/uorocketry/atsamd"
#git = "https://github.com/atsamd-rs/atsamd"
#version = "0.17.0"
features = ["defmt", "same51j", "same51j-rt", "dma", "can"]

[workspace.dependencies.stm32l0xx-hal]
git = "https://github.com/stm32-rs/stm32l0xx-hal"
features = ["mcu-STM32L051K8Tx", "rt"]


[workspace.dependencies.serde]
version = "1.0.150"
default-features = false
features = ["derive"]

[workspace.dependencies.cortex-m]
version = "0.7.6"
features = ["critical-section-single-core"]

[profile.dev]
# Using LTO causes issues with GDB.
lto = false
panic = 'abort'

# Only optimize dependencies for size in debug, keeping the top crate debug friendly
[profile.dev.package."*"]
opt-level = "s"

[profile.dev.package.sbg-rs]
opt-level = 0
debug = true

# Try to remove this 
[profile.dev.build-override]
#opt-level = 0 Commenting this may cause issues. 
debug = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'thin'
opt-level = 3            # <-
overflow-checks = false  # <-

[profile.release.package.sbg-rs]
debug = true
opt-level = 0

#Try to remove this
[profile.release.build-override]
#opt-level = 0
