[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "^0.7.0", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7.0"
panic-halt = "0.2.0"
defmt-rtt = "0.4.0"
defmt = "0.3.2"
atsamd-hal = { workspace = true }
#
#[package.metadata.docs.rs]
#targets = ["thumbv7em-none-eabihf"]
