[package]
name = "communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = "^0.7.0"
cortex-m-rtic = "1.1.3"
systick-monotonic = "1.0.1"
postcard = "1.0.2"
heapless = "0.7.16"
common-arm-atsame = { path = "../../libraries/common-arm-atsame" }
common-arm = { path = "../../libraries/common-arm" }
atsamd-hal = { workspace = true }
messages = { path = "../../libraries/messages" }
typenum = "1.16.0"
embedded-sdmmc = "0.8.0"
#panic-halt = "0.2.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
ublox = {version = "0.4.5", features = ['serde', 'alloc'], default-features = false}
embedded-alloc = "0.5.0"
