[package]
name = "main_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "^0.7.0", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7.0"
panic-halt = "0.2.0"
embedded-sdmmc = "0.3.0"
embedded-hal = "0.2.7"
defmt-rtt = "0.4.0"
defmt = "0.3.2"
atsamd-hal = { workspace = true }
common-arm = { path = "../../libraries/common-arm" }
enum_dispatch = "0.3.8"
