[package]
name = "nav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cortex-m = { workspace = true }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
rtic = {version = "2.0.0", features = ["thumbv7-backend"]} 
rtic-monotonics = {version = "2.0.2", features = ["cortex-m-systick", "stm32h733vg"]}
common-arm-stm32h7 = { path = "../../libraries/common-arm-stm32h7" }
common-arm = { path = "../../libraries/common-arm" }
stm32h7xx-hal = { workspace = true }
postcard = "1.0.2"
messages = { path = "../../libraries/messages" }
systick-monotonic = "1.0.1"
defmt = "0.3.2"
fdcan = "0.2"
sbg-rs = {path = "../../libraries/sbg-rs"}
embedded-alloc = "0.5.0"
heapless = "0.7.16"

defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
chrono = {version = "0.4.0", default-features = false}