[package]
name = "recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = "^0.7.0"
cortex-m-rtic = "1.1.3"
systick-monotonic = "1.0.1"
defmt = "0.3.2"
postcard = "1.0.2"
heapless = "0.7.16"
common-arm = { path = "../../libraries/common-arm" }
common-arm-atsame = { path = "../../libraries/common-arm-atsame" }
atsamd-hal = { workspace = true }
messages = { path = "../../libraries/messages" }
typenum = "1.16.0"
enum_dispatch = "0.3.11"
ms5611-01ba = { git = "https://github.com/NoahSprenger/ms5611-01ba", branch = "embedded-hal-02" }

embedded-hal = "0.2.7"
