[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = "^0.7.0"
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"
systick-monotonic = "1.0.1"
defmt = "0.3.2"
postcard = "1.0.2"
heapless = "0.7.16"
common-arm = { path = "../../libraries/common-arm" }
atsamd-hal = { workspace = true }
messages = { path = "../../libraries/messages" }
sbg-rs = {path = "../../libraries/sbg-rs"}
embedded-sdmmc = "0.3.0"
typenum = "1.16.0"
embedded-alloc = "0.5.0"