[package]
name = "sensor_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = "^0.7.0"
cortex-m-rtic = "1.1.3"
common-arm-stm32 = {path = "../../libraries/common-arm-stm32"}
common-arm = {path = "../../libraries/common-arm"}
stm32h7xx-hal = { workspace = true }
postcard = "1.0.2"
messages = { path = "../../libraries/messages" }
