[package]
name = "simple_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "^0.7.0", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7.0"
cortex-m-rtic = "1.1.3"

defmt-rtt = "0.4.0"
defmt = "0.3.2"
stm32h7xx-hal = { workspace = true }
common-arm-stm32h7 = { path = "../../libraries/common-arm-stm32h7" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
chrono = {version = "0.4.0", default-features = false}
sbg-rs = {path = "../../libraries/sbg-rs"}
messages = { path = "../../libraries/messages" }
heapless = "0.7.16"
embedded-alloc = "0.5.0"
common-arm = { path = "../../libraries/common-arm" }
