[package]
name = "common-arm"
description = "Common embedded code for the boards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.2"
atsamd-hal = { workspace = true }
cortex-m = { version = "^0.7.0", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7.0"
embedded-sdmmc = "0.3.0"
embedded-hal = "0.2.7"