[package]
name = "common-arm"
description = "Common embedded code for the boards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { workspace = true }
postcard = { version = "1.0.2", features = ["use-defmt"] }
#atsamd-hal = {workspace = true}
defmt = "0.3.2"
defmt-rtt = "0.4.0"
heapless = "0.7.16"
derive_more = "0.99.17"
cortex-m-rt = "^0.7.0"
embedded-sdmmc = "0.3.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
mcan = "0.3.0"
messages = { path = "../messages" }
