[package]
name = "messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
serde = { workspace = true }
defmt = "0.3.2"
fugit = "0.3.6"
heapless = "0.7.16"
ts-rs = { version = "6.2.1", optional = true }
mavlink = { git = "https://github.com/uorocketry/rust-mavlink", branch = "hydra_dialect", default-features = false}

[dev-dependencies]
proptest = "1.2.0"
proptest-derive = "0.3.0"
postcard = { version = "1.0.4", features = ["alloc"] }

[features]
default = ["mavlink/embedded", "mavlink/uorocketry"]
std = ["mavlink/default"]
ts = ["std", "dep:ts-rs"]
