[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
serde = { workspace = true }
defmt = "0.3.2"
fugit = "0.3.6"
heapless = "0.7.16"
mavlink = { git = "https://github.com/uorocketry/rust-mavlink", default-features = false }
bitflags = { version = "2.3.1", features = ["serde"] }
proptest = { version = "1.2.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
messages-proc-macros-lib = { path = "messages-proc-macros-lib" }

[dev-dependencies]
proptest = "1.2.0"
proptest-derive = "0.3.0"
postcard = { version = "1.0.4", features = ["alloc"] }

[features]
default = ["mavlink/embedded", "mavlink/uorocketry"]
std = ["mavlink/default", "dep:proptest", "dep:proptest-derive"]
